# serializer version: 1
# name: TestFinalize.test_ok
  dict({
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
    ]),
    'id': 1,
    'index': dict({
      'id': 1,
      'version': 2,
    }),
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 1,
      'progress': 0,
      'state': 'running',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'nuvs',
    }),
    'ready': True,
    'reference': dict({
      'data_type': 'genome',
      'id': 1,
      'name': 'Reference',
    }),
    'results': dict({
      'hits': list([
      ]),
    }),
    'sample': dict({
      'id': 1,
    }),
    'subtractions': list([
    ]),
    'updated_at': '2015-10-06T20:00:00Z',
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': 'nuvs',
  })
# ---
# name: TestGet.test_ok
  dict({
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
      dict({
        'analysis': 1,
        'description': None,
        'format': 'fasta',
        'id': 1,
        'name': 'reference.fa',
        'name_on_disk': '1-reference.fa',
        'size': None,
        'uploaded_at': None,
      }),
    ]),
    'id': 1,
    'index': dict({
      'id': 1,
      'version': 3,
    }),
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 1,
      'progress': 100,
      'state': 'succeeded',
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'workflow': 'pathoscope',
    }),
    'ready': True,
    'reference': dict({
      'data_type': 'genome',
      'id': 1,
      'name': 'Test Reference',
    }),
    'results': dict({
      'hits': list([
      ]),
    }),
    'sample': dict({
      'id': 1,
    }),
    'subtractions': list([
      dict({
        'id': 2,
        'name': 'Apple',
      }),
      dict({
        'id': 1,
        'name': 'Plum',
      }),
    ]),
    'updated_at': '2015-10-06T20:00:00Z',
    'user': dict({
      'handle': 'myersmitchell',
      'id': 2,
    }),
    'workflow': 'pathoscope',
  })
# ---
# name: test_blast[None]
  dict({
    'analysis_id': 1,
    'created_at': '2015-10-06T20:00:00Z',
    'error': None,
    'id': 2,
    'interval': 3,
    'last_checked_at': '2015-10-06T20:00:00Z',
    'ready': False,
    'result': None,
    'rid': None,
    'sequence_index': 5,
    'task_id': None,
    'updated_at': '2015-10-06T20:00:00Z',
  })
# ---
# name: test_find
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 3,
        'index': dict({
          'id': 1,
          'version': 2,
        }),
        'job': None,
        'ready': True,
        'reference': dict({
          'data_type': 'genome',
          'id': 2,
          'name': 'Reference',
        }),
        'sample': dict({
          'id': 1,
        }),
        'subtractions': list([
        ]),
        'updated_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'pathoscope',
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'index': dict({
          'id': 1,
          'version': 2,
        }),
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 1,
          'progress': 0,
          'state': 'running',
          'user': dict({
            'handle': 'modonnell',
            'id': 3,
          }),
          'workflow': 'pathoscope',
        }),
        'ready': True,
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'sample': dict({
          'id': 1,
        }),
        'subtractions': list([
          dict({
            'id': 1,
            'name': 'Malus domestica',
          }),
        ]),
        'updated_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'pathoscope',
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'index': dict({
          'id': 1,
          'version': 2,
        }),
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 1,
          'progress': 0,
          'state': 'running',
          'user': dict({
            'handle': 'modonnell',
            'id': 3,
          }),
          'workflow': 'pathoscope',
        }),
        'ready': True,
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'sample': dict({
          'id': 1,
        }),
        'subtractions': list([
        ]),
        'updated_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'pathoscope',
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_upload_file[None]
  dict({
    'analysis': 1,
    'description': None,
    'format': 'fasta',
    'id': 1,
    'name': 'reference.fa',
    'name_on_disk': '1-reference.fa',
    'size': 723988,
    'uploaded_at': '2015-10-06T20:00:00Z',
  })
# ---
# name: test_upload_file[None].1
  dict({
    'analysis': 1,
    'description': None,
    'format': 'fasta',
    'id': 2,
    'name': 'reference.fa',
    'name_on_disk': '2-reference.fa',
    'size': 723988,
    'uploaded_at': '2015-10-06T20:00:00Z',
  })
# ---
